[gd_scene load_steps=12 format=2]

[ext_resource path="res://VigenereHowToDecrypt.gd" type="Script" id=1]
[ext_resource path="res://VigenereBackground.jpg" type="Texture" id=2]
[ext_resource path="res://cnr.otf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 20
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 20
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 20
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 20
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=5]
size = 20
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=6]
size = 25
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=7]
size = 20
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=8]
size = 25
font_data = ExtResource( 3 )

[node name="VigenereHowToDecrypt" type="Node"]
script = ExtResource( 1 )

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -58.0
margin_right = 1024.0
margin_bottom = 707.0
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )

[node name="VigenereAsset" type="Node" parent="."]

[node name="ScrollContainer" type="ScrollContainer" parent="VigenereAsset"]
editor/display_folded = true
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 33.0
margin_top = -250.0
margin_right = 183.0
margin_bottom = 128.0

[node name="VBoxContainer" type="VBoxContainer" parent="VigenereAsset/ScrollContainer"]
margin_bottom = 1250.0
custom_constants/separation = 50

[node name="AControl" type="Control" parent="VigenereAsset/ScrollContainer/VBoxContainer"]

[node name="AButton" type="Button" parent="VigenereAsset/ScrollContainer/VBoxContainer/AControl"]
margin_right = 120.0
margin_bottom = 40.0
text = "A = 0"

[node name="BControl" type="Control" parent="VigenereAsset/ScrollContainer/VBoxContainer"]
margin_top = 50.0
margin_bottom = 50.0

[node name="BButton" type="Button" parent="VigenereAsset/ScrollContainer/VBoxContainer/BControl"]
margin_right = 120.0
margin_bottom = 40.0
text = "B = 1"

[node name="CControl" type="Control" parent="VigenereAsset/ScrollContainer/VBoxContainer"]
margin_top = 100.0
margin_bottom = 100.0

[node name="CButton" type="Button" parent="VigenereAsset/ScrollContainer/VBoxContainer/CControl"]
margin_right = 120.0
margin_bottom = 40.0
text = "C = 2"

[node name="DControl" type="Control" parent="VigenereAsset/ScrollContainer/VBoxContainer"]
margin_top = 150.0
margin_bottom = 150.0

[node name="DButton" type="Button" parent="VigenereAsset/ScrollContainer/VBoxContainer/DControl"]
margin_right = 120.0
margin_bottom = 40.0
text = "D = 3"

[node name="EControl" type="Control" parent="VigenereAsset/ScrollContainer/VBoxContainer"]
margin_top = 200.0
margin_bottom = 200.0

[node name="EButton" type="Button" parent="VigenereAsset/ScrollContainer/VBoxContainer/EControl"]
margin_right = 120.0
margin_bottom = 40.0
text = "E = 4"

[node name="FControl" type="Control" parent="VigenereAsset/ScrollContainer/VBoxContainer"]
margin_top = 250.0
margin_bottom = 250.0

[node name="FButton" type="Button" parent="VigenereAsset/ScrollContainer/VBoxContainer/FControl"]
margin_right = 120.0
margin_bottom = 40.0
text = "F = 5"

[node name="GControl" type="Control" parent="VigenereAsset/ScrollContainer/VBoxContainer"]
margin_top = 300.0
margin_bottom = 300.0

[node name="GButton" type="Button" parent="VigenereAsset/ScrollContainer/VBoxContainer/GControl"]
margin_right = 120.0
margin_bottom = 40.0
text = "G = 6"

[node name="HControl" type="Control" parent="VigenereAsset/ScrollContainer/VBoxContainer"]
margin_top = 350.0
margin_bottom = 350.0

[node name="HButton" type="Button" parent="VigenereAsset/ScrollContainer/VBoxContainer/HControl"]
margin_right = 120.0
margin_bottom = 40.0
text = "H = 7"

[node name="IControl" type="Control" parent="VigenereAsset/ScrollContainer/VBoxContainer"]
margin_top = 400.0
margin_bottom = 400.0

[node name="IButton" type="Button" parent="VigenereAsset/ScrollContainer/VBoxContainer/IControl"]
margin_right = 120.0
margin_bottom = 40.0
text = "I = 8"

[node name="JControl" type="Control" parent="VigenereAsset/ScrollContainer/VBoxContainer"]
margin_top = 450.0
margin_bottom = 450.0

[node name="JButton" type="Button" parent="VigenereAsset/ScrollContainer/VBoxContainer/JControl"]
margin_right = 120.0
margin_bottom = 40.0
text = "J = 9"

[node name="KControl" type="Control" parent="VigenereAsset/ScrollContainer/VBoxContainer"]
margin_top = 500.0
margin_bottom = 500.0

[node name="KButton" type="Button" parent="VigenereAsset/ScrollContainer/VBoxContainer/KControl"]
margin_right = 120.0
margin_bottom = 40.0
text = "K = 10"

[node name="LControl" type="Control" parent="VigenereAsset/ScrollContainer/VBoxContainer"]
margin_top = 550.0
margin_bottom = 550.0

[node name="LButton" type="Button" parent="VigenereAsset/ScrollContainer/VBoxContainer/LControl"]
margin_right = 120.0
margin_bottom = 40.0
text = "L = 11"

[node name="MControl" type="Control" parent="VigenereAsset/ScrollContainer/VBoxContainer"]
margin_top = 600.0
margin_bottom = 600.0

[node name="MButton" type="Button" parent="VigenereAsset/ScrollContainer/VBoxContainer/MControl"]
margin_right = 120.0
margin_bottom = 40.0
text = "M = 12"

[node name="NControl" type="Control" parent="VigenereAsset/ScrollContainer/VBoxContainer"]
margin_top = 650.0
margin_bottom = 650.0

[node name="NButton" type="Button" parent="VigenereAsset/ScrollContainer/VBoxContainer/NControl"]
margin_right = 120.0
margin_bottom = 40.0
text = "N = 13"

[node name="OControl" type="Control" parent="VigenereAsset/ScrollContainer/VBoxContainer"]
margin_top = 700.0
margin_bottom = 700.0

[node name="OButton" type="Button" parent="VigenereAsset/ScrollContainer/VBoxContainer/OControl"]
margin_right = 120.0
margin_bottom = 40.0
text = "O = 14"

[node name="PControl" type="Control" parent="VigenereAsset/ScrollContainer/VBoxContainer"]
margin_top = 750.0
margin_bottom = 750.0

[node name="PButton" type="Button" parent="VigenereAsset/ScrollContainer/VBoxContainer/PControl"]
margin_right = 120.0
margin_bottom = 40.0
text = "P = 15"

[node name="QControl" type="Control" parent="VigenereAsset/ScrollContainer/VBoxContainer"]
margin_top = 800.0
margin_bottom = 800.0

[node name="QButton" type="Button" parent="VigenereAsset/ScrollContainer/VBoxContainer/QControl"]
margin_right = 120.0
margin_bottom = 40.0
text = "Q = 16"

[node name="RControl" type="Control" parent="VigenereAsset/ScrollContainer/VBoxContainer"]
margin_top = 850.0
margin_bottom = 850.0

[node name="RButton" type="Button" parent="VigenereAsset/ScrollContainer/VBoxContainer/RControl"]
margin_right = 120.0
margin_bottom = 40.0
text = "R = 17"

[node name="SControl" type="Control" parent="VigenereAsset/ScrollContainer/VBoxContainer"]
margin_top = 900.0
margin_bottom = 900.0

[node name="SButton" type="Button" parent="VigenereAsset/ScrollContainer/VBoxContainer/SControl"]
margin_right = 120.0
margin_bottom = 40.0
text = "S = 18"

[node name="TControl" type="Control" parent="VigenereAsset/ScrollContainer/VBoxContainer"]
margin_top = 950.0
margin_bottom = 950.0

[node name="TButton" type="Button" parent="VigenereAsset/ScrollContainer/VBoxContainer/TControl"]
margin_right = 120.0
margin_bottom = 40.0
text = "T = 19"

[node name="UControl" type="Control" parent="VigenereAsset/ScrollContainer/VBoxContainer"]
margin_top = 1000.0
margin_bottom = 1000.0

[node name="UButton" type="Button" parent="VigenereAsset/ScrollContainer/VBoxContainer/UControl"]
margin_right = 120.0
margin_bottom = 40.0
text = "U = 20"

[node name="VControl" type="Control" parent="VigenereAsset/ScrollContainer/VBoxContainer"]
margin_top = 1050.0
margin_bottom = 1050.0

[node name="VButton" type="Button" parent="VigenereAsset/ScrollContainer/VBoxContainer/VControl"]
margin_right = 120.0
margin_bottom = 40.0
text = "V = 21"

[node name="WControl" type="Control" parent="VigenereAsset/ScrollContainer/VBoxContainer"]
margin_top = 1100.0
margin_bottom = 1100.0

[node name="WButton" type="Button" parent="VigenereAsset/ScrollContainer/VBoxContainer/WControl"]
margin_right = 120.0
margin_bottom = 40.0
text = "W = 22"

[node name="XControl" type="Control" parent="VigenereAsset/ScrollContainer/VBoxContainer"]
margin_top = 1150.0
margin_bottom = 1150.0

[node name="XButton" type="Button" parent="VigenereAsset/ScrollContainer/VBoxContainer/XControl"]
margin_right = 120.0
margin_bottom = 40.0
text = "X = 23"

[node name="YControl" type="Control" parent="VigenereAsset/ScrollContainer/VBoxContainer"]
margin_top = 1200.0
margin_bottom = 1200.0

[node name="YButton" type="Button" parent="VigenereAsset/ScrollContainer/VBoxContainer/YControl"]
margin_right = 120.0
margin_bottom = 40.0
text = "Y = 24"

[node name="ZControl" type="Control" parent="VigenereAsset/ScrollContainer/VBoxContainer"]
margin_top = 1250.0
margin_bottom = 1250.0

[node name="ZButton" type="Button" parent="VigenereAsset/ScrollContainer/VBoxContainer/ZControl"]
margin_right = 120.0
margin_bottom = 40.0
text = "Z = 25"

[node name="ConvertToNum" type="VBoxContainer" parent="VigenereAsset"]
margin_left = 259.515
margin_top = 74.6382
margin_right = 490.515
margin_bottom = 357.638
custom_constants/separation = 50

[node name="EncryptedMessage" type="Label" parent="VigenereAsset/ConvertToNum"]
margin_right = 231.0
margin_bottom = 21.0
custom_fonts/font = SubResource( 1 )
text = "WIQOOXH"
align = 1

[node name="Keyword" type="Label" parent="VigenereAsset/ConvertToNum"]
margin_top = 71.0
margin_right = 231.0
margin_bottom = 92.0
custom_fonts/font = SubResource( 2 )
text = "KEYWORD"
align = 1

[node name="NumResult" type="Label" parent="VigenereAsset/ConvertToNum"]
margin_top = 142.0
margin_right = 231.0
margin_bottom = 163.0
custom_fonts/font = SubResource( 3 )
text = "       "
align = 1

[node name="NumToLetters" type="VBoxContainer" parent="VigenereAsset"]
margin_left = 651.847
margin_top = 71.8522
margin_right = 882.847
margin_bottom = 197.852
custom_constants/separation = 50

[node name="DecryptedNum" type="Label" parent="VigenereAsset/NumToLetters"]
margin_right = 231.0
margin_bottom = 21.0
custom_fonts/font = SubResource( 4 )
text = "       "

[node name="DecryptedMessage" type="Label" parent="VigenereAsset/NumToLetters"]
margin_top = 71.0
margin_right = 231.0
margin_bottom = 92.0
custom_fonts/font = SubResource( 5 )
text = "       "

[node name="MinusSign" type="Label" parent="VigenereAsset"]
margin_left = 211.925
margin_top = 111.144
margin_right = 228.925
margin_bottom = 137.144
custom_fonts/font = SubResource( 6 )
text = "-"

[node name="SubtractionBottom" type="Label" parent="VigenereAsset"]
margin_left = 237.023
margin_top = 164.523
margin_right = 512.023
margin_bottom = 185.523
custom_fonts/font = SubResource( 7 )
text = "_________________________"

[node name="TextBackground" type="ColorRect" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -144.0
color = Color( 0.0862745, 0.180392, 0.462745, 1 )

[node name="TextBox" type="Label" parent="TextBackground"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 23.0
margin_top = -140.0
margin_right = -28.0
custom_fonts/font = SubResource( 8 )
text = "We will this time stack the encrypted message on top of the key, repeating the key if necessary. We need to subtract instead of add this time, so the plus becomes a minus."
align = 1
valign = 1
autowrap = true

[node name="Continue" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 65.092
margin_top = 111.903
margin_right = 198.092
margin_bottom = 142.903
text = "Continue"

[node name="ResetCurrentStep" type="Button" parent="."]
margin_left = 291.403
margin_top = 410.074
margin_right = 488.403
margin_bottom = 443.074
text = "Reset current step"
[connection signal="pressed" from="VigenereAsset/ScrollContainer/VBoxContainer/AControl/AButton" to="." method="_on_AButton_pressed"]
[connection signal="pressed" from="VigenereAsset/ScrollContainer/VBoxContainer/BControl/BButton" to="." method="_on_BButton_pressed"]
[connection signal="pressed" from="VigenereAsset/ScrollContainer/VBoxContainer/CControl/CButton" to="." method="_on_CButton_pressed"]
[connection signal="pressed" from="VigenereAsset/ScrollContainer/VBoxContainer/DControl/DButton" to="." method="_on_DButton_pressed"]
[connection signal="pressed" from="VigenereAsset/ScrollContainer/VBoxContainer/EControl/EButton" to="." method="_on_EButton_pressed"]
[connection signal="pressed" from="VigenereAsset/ScrollContainer/VBoxContainer/FControl/FButton" to="." method="_on_FButton_pressed"]
[connection signal="pressed" from="VigenereAsset/ScrollContainer/VBoxContainer/GControl/GButton" to="." method="_on_GButton_pressed"]
[connection signal="pressed" from="VigenereAsset/ScrollContainer/VBoxContainer/HControl/HButton" to="." method="_on_HButton_pressed"]
[connection signal="pressed" from="VigenereAsset/ScrollContainer/VBoxContainer/IControl/IButton" to="." method="_on_IButton_pressed"]
[connection signal="pressed" from="VigenereAsset/ScrollContainer/VBoxContainer/JControl/JButton" to="." method="_on_JButton_pressed"]
[connection signal="pressed" from="VigenereAsset/ScrollContainer/VBoxContainer/KControl/KButton" to="." method="_on_KButton_pressed"]
[connection signal="pressed" from="VigenereAsset/ScrollContainer/VBoxContainer/LControl/LButton" to="." method="_on_LButton_pressed"]
[connection signal="pressed" from="VigenereAsset/ScrollContainer/VBoxContainer/MControl/MButton" to="." method="_on_MButton_pressed"]
[connection signal="pressed" from="VigenereAsset/ScrollContainer/VBoxContainer/NControl/NButton" to="." method="_on_NButton_pressed"]
[connection signal="pressed" from="VigenereAsset/ScrollContainer/VBoxContainer/OControl/OButton" to="." method="_on_OButton_pressed"]
[connection signal="pressed" from="VigenereAsset/ScrollContainer/VBoxContainer/PControl/PButton" to="." method="_on_PButton_pressed"]
[connection signal="pressed" from="VigenereAsset/ScrollContainer/VBoxContainer/QControl/QButton" to="." method="_on_QButton_pressed"]
[connection signal="pressed" from="VigenereAsset/ScrollContainer/VBoxContainer/RControl/RButton" to="." method="_on_RButton_pressed"]
[connection signal="pressed" from="VigenereAsset/ScrollContainer/VBoxContainer/SControl/SButton" to="." method="_on_SButton_pressed"]
[connection signal="pressed" from="VigenereAsset/ScrollContainer/VBoxContainer/TControl/TButton" to="." method="_on_TButton_pressed"]
[connection signal="pressed" from="VigenereAsset/ScrollContainer/VBoxContainer/UControl/UButton" to="." method="_on_UButton_pressed"]
[connection signal="pressed" from="VigenereAsset/ScrollContainer/VBoxContainer/VControl/VButton" to="." method="_on_VButton_pressed"]
[connection signal="pressed" from="VigenereAsset/ScrollContainer/VBoxContainer/WControl/WButton" to="." method="_on_WButton_pressed"]
[connection signal="pressed" from="VigenereAsset/ScrollContainer/VBoxContainer/XControl/XButton" to="." method="_on_XButton_pressed"]
[connection signal="pressed" from="VigenereAsset/ScrollContainer/VBoxContainer/YControl/YButton" to="." method="_on_YButton_pressed"]
[connection signal="pressed" from="VigenereAsset/ScrollContainer/VBoxContainer/ZControl/ZButton" to="." method="_on_ZButton_pressed"]
[connection signal="pressed" from="Continue" to="." method="_on_Continue_pressed"]
[connection signal="pressed" from="ResetCurrentStep" to="." method="_on_ResetCurrentStep_pressed"]
